Fix path.svg not showing up

--- a/_sass/_main.scss
+++ b/_sass/_main.scss
@@ -58,7 +58,7 @@ nav {
 
 .header {
 	overflow: hidden;
-	background-image: url('assets/img/path.svg');
+	background-image: url('../img/path.svg');
 	background-position: bottom left;
 	background-repeat: no-repeat;
 }
